Added passport auth for admin endpoints. Setup of auth for swagger
