# app/Models/User.php
@@ -3,6 +3,7 @@
 namespace App\Models;
 
 use App\Traits\Filterable;
+use Carbon\Carbon;
 use Illuminate\Auth\Passwords\CanResetPassword;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\SoftDeletes;
@@ -100,6 +101,14 @@ class User extends Authenticatable
     public function setPasswordAttribute($value)
     {
         $this->attributes['password'] = bcrypt($value);
+    }
+
+    /**
+     * Set Password Attribute of User.
+     */
+    public function setBirthDateAttribute($value)
+    {
+        $this->attributes['birth_date'] = Carbon::parse($value);
     }
 
     public function articles()
