# config/l5-swagger.php
@@ -161,22 +161,27 @@ return [
                 ],
                 */
 
-                /* Open API 3.0 support
-                'passport' => [ // Unique name of security
-                    'type' => 'oauth2', // The type of the security scheme. Valid values are "basic", "apiKey" or "oauth2".
-                    'description' => 'Laravel passport oauth2 security.',
-                    'in' => 'header',
-                    'scheme' => 'https',
-                    'flows' => [
-                        "password" => [
-                            "authorizationUrl" => config('app.url') . '/oauth/authorize',
-                            "tokenUrl" => config('app.url') . '/oauth/token',
-                            "refreshUrl" => config('app.url') . '/token/refresh',
-                            "scopes" => []
-                        ],
-                    ],
-                ],
-                */
+                /* Open API 3.0 support */
+                // 'passport' => [ // Unique name of security
+                //     'type' => 'oauth2', // The type of the security scheme. Valid values are "basic", "apiKey" or "oauth2".
+                //     'description' => 'Laravel passport oauth2 security.',
+                //     'in' => 'header',
+                //     'scheme' => 'https',
+                //     'flows' => [
+                //         'password' => [
+                //             'authorizationUrl' => config('app.url').'/oauth/authorize',
+                //             'tokenUrl' => config('app.url').'/api/auth/login',
+                //             'refreshUrl' => config('app.url').'/token/refresh',
+                //             'scopes' => [],
+                //         ],
+                //     ],
+                // ],
+                'bearer_token' => [ // Unique name of security
+                    'type' => 'apiKey', // Valid values are "basic", "apiKey" or "oauth2".
+                    'description' => 'Enter token in format (Bearer {token})',
+                    'name' => 'Authorization', // The name of the header or query parameter to be used.
+                    'in' => 'header', // The location of the API key. Valid values are "query" or "header".
+                 ],
             ],
             'security' => [
                 /*
